--- a/content/projects-campaigns/scottish-charity-awards/2017.md
+++ b/content/projects-campaigns/scottish-charity-awards/2017.md
@@ -10,21 +10,7 @@ With so much inspirational work going on across the country, the Scottish Charit
 
 ## Make your nominations
 
-Charity of the year
-
-Cracking campaign
-
-Pioneering project
-
-Leading light
-
-Celebrating communities
-
-Terrific trustee
-
-Demonstrating digital
-
-Charity champion
+There are [eight categories](categories/index.md) up for grabs.
 
 ## FAQs
 
